feat: implement Mandiri PDF parser service and add supporting test utilities for document analysis